--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
 /*disagn boit 2 page  1*/
 
 .navi{
-  background-color:(218,224,235);
+  background-color:#ffff;
   text-align: center;
   margin: 0px;
   border-radius: 40px;
